# the-wired

./: .gitignore  Cargo.toml  README.md  build.rs  tailwind.config.js
migrations/: 0_init.sql
src/: main.rs
src/db/: mod.rs  timeline.rs
src/routes/: get_timeline.rs  index.rs  mod.rs  posts.rs
src/structs/: post.rs
src/templates/: base.rs  date.rs  index.rs  mod.rs  timeline.rs
src/utils/: mod.rs  render_iterable.rs
